* (bug 24724) list=allusers is out by 1 (shows total users - 1)
* (bug 24166) API error when using rvprop=tags
* For wikis setup in French language, Special:Téléchargement works again 
  as an alias for Special:Upload
* (bug 25167) Correctly load JS fixes for IE6 (fixing a regression in 1.16.0)
* (bug 25248) API: paraminfo errors with certain modules

== Changes since 1.16 beta 3 ==

* (bug 23769) Disabled HTML 5 client-side form validation. Was introduced in 
  1.16 beta 1, but is currently poorly supported by browsers.
* (bug 23175) Re-added window.ta variable for backwards compatibility.
* (bug 23264) Fixed breakage of various command line scripts due to extra line
  endings being inserted by Maintenance::output().
* Fixed HTTP client functionality with safe_mode=On.
* Fixed parser tests broken in 1.16 beta 3.
* For Oracle DB backend: fixed parser tests and table prefix feature.
* (bug 23767) Fixed PHP warning when REQUEST_URI is blank (IIS issue).
* Fixed plural function for Northern Sami (se)
* (bug 23597) Fixed conflicts between ID attributes in the Vector skin and 
  parser-generated heading IDs. Renamed head, panel, head-base and page-base.
* Disabled $wgHitcounterUpdateFreq>1 feature on SQLite, does not work yet.
* (bug 23465) Don't ignore the predefined destination filename on 
  Special:Upload after following a red link to a file.
* In SQLite full-text search feature: fixed "move page" feature, was non-
  functional.
* (bug 24565) Fixed Cache-Control headers sent from API modules, to protect
  user privacy in the case where an attacker can access the wiki through the
  same HTTP proxy as a logged-in user.
* Fixed an XSS vulnerability in profileinfo.php for installations with 
  $wgEnableProfileInfo = true (false by default)
* Fixed a case where an X-Vary-Options header was sent despite $wgUseXVO being
  false. Fixed a minor header parsing issue when $wgUseXVO = true.
* Fixed a register_globals arbitrary inclusion vulnerability in 