@@ -52,6 +52,8 @@ further.
   as an alias for Special:Upload
 * (bug 25167) Correctly load JS fixes for IE6 (fixing a regression in 1.16.0)
 * (bug 25248) API: paraminfo errors with certain modules
+* Installer now handles situations when safe_mode is active or exec()
+  and similar functions are disabled better.
 
 == Changes since 1.16 beta 3 ==
 
